--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -876,21 +876,21 @@
     //Rewards Strings
 
 
-    <string name="rewars_enter_otp">OTP  दर्ज करें </string>
-    <string name="rewars_confirm">पुष्टि करें </string>
-    <string name="rewars_first_name">"पहला नाम "</string>
-    <string name="rewars_last_name">"आख़िरी नाम "</string>
-    <string name="rewars_verify">"सत्यापित करें "</string>
-    <string name="rewars_phone">"फोन "</string>
-    <string name="rewars_email">"ई मेल "</string>
-    <string name="rewars_gender">लिंग</string>
-    <string name="rewars_male">पुरुष</string>
-    <string name="rewars_female">"महिला "</string>
-    <string name="rewars_dob">"जन्म तिथि "</string>
-    <string name="rewars_location">स्थान</string>
-    <string name="rewars_working_status">"कामकाजी स्थिति "</string>
-    <string name="rewars_working">"कामकाजी "</string>
-    <string name="rewars_non_working">"गैर कामकाजी "</string>
-    <string name="rewars_language">"भाषा "</string>
-    <string name="rewars_save_continue">"सेव करें और आगे बढ़ें "</string>
+    <string name="rewards_enter_otp">OTP  दर्ज करें </string>
+    <string name="rewards_confirm">पुष्टि करें </string>
+    <string name="rewards_first_name">"पहला नाम "</string>
+    <string name="rewards_last_name">"आख़िरी नाम "</string>
+    <string name="rewards_verify">"सत्यापित करें "</string>
+    <string name="rewards_phone">"फोन "</string>
+    <string name="rewards_email">"ई मेल "</string>
+    <string name="rewards_gender">लिंग</string>
+    <string name="rewards_male">पुरुष</string>
+    <string name="rewards_female">"महिला "</string>
+    <string name="rewards_dob">"जन्म तिथि "</string>
+    <string name="rewards_location">स्थान</string>
+    <string name="rewards_working_status">"कामकाजी स्थिति "</string>
+    <string name="rewards_working">"कामकाजी "</string>
+    <string name="rewards_non_working">"गैर कामकाजी "</string>
+    <string name="rewards_language">"भाषा "</string>
+    <string name="rewards_save_continue">"सेव करें और आगे बढ़ें "</string>
 </resources>
