--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -911,21 +911,21 @@
     //Rewards Strings
 
 
-    <string name="rewars_enter_otp">OTP ಯನ್ನು ನಮೂದಿಸಿ</string>
-    <string name="rewars_confirm">ದೃಢೀಕರಿಸಿ</string>
-    <string name="rewars_first_name">ಮೊದಲ ಹೆಸರು</string>
-    <string name="rewars_last_name">ಕೊನೆಯ ಹೆಸರು</string>
-    <string name="rewars_verify">ಪರಿಶೀಲಿಸಿ</string>
-    <string name="rewars_phone">ದೂರವಾಣಿ</string>
-    <string name="rewars_email">ಇಮೇಲ್</string>
-    <string name="rewars_gender">ಲಿಂಗ</string>
-    <string name="rewars_male">ಪುರುಷ</string>
-    <string name="rewars_female">ಸ್ತ್ರೀ</string>
-    <string name="rewars_dob">"ಹುಟ್ಟಿದ ದಿನ "</string>
-    <string name="rewars_location">ಸ್ಥಳ</string>
-    <string name="rewars_working_status">ಕೆಲಸದ ಸ್ಥಿತಿ</string>
-    <string name="rewars_working">ಕೆಲಸ ಮಾಡುವುದು</string>
-    <string name="rewars_non_working">ಕೆಲಸ ಮಾಡದಿರುವುದು</string>
-    <string name="rewars_language">ಭಾಷೆ</string>
-    <string name="rewars_save_continue">"ಉಳಿಸಿ ಮತ್ತು ಮುಂದುವರೆಸಿ "</string>
+    <string name="rewards_enter_otp">OTP ಯನ್ನು ನಮೂದಿಸಿ</string>
+    <string name="rewards_confirm">ದೃಢೀಕರಿಸಿ</string>
+    <string name="rewards_first_name">ಮೊದಲ ಹೆಸರು</string>
+    <string name="rewards_last_name">ಕೊನೆಯ ಹೆಸರು</string>
+    <string name="rewards_verify">ಪರಿಶೀಲಿಸಿ</string>
+    <string name="rewards_phone">ದೂರವಾಣಿ</string>
+    <string name="rewards_email">ಇಮೇಲ್</string>
+    <string name="rewards_gender">ಲಿಂಗ</string>
+    <string name="rewards_male">ಪುರುಷ</string>
+    <string name="rewards_female">ಸ್ತ್ರೀ</string>
+    <string name="rewards_dob">"ಹುಟ್ಟಿದ ದಿನ "</string>
+    <string name="rewards_location">ಸ್ಥಳ</string>
+    <string name="rewards_working_status">ಕೆಲಸದ ಸ್ಥಿತಿ</string>
+    <string name="rewards_working">ಕೆಲಸ ಮಾಡುವುದು</string>
+    <string name="rewards_non_working">ಕೆಲಸ ಮಾಡದಿರುವುದು</string>
+    <string name="rewards_language">ಭಾಷೆ</string>
+    <string name="rewards_save_continue">"ಉಳಿಸಿ ಮತ್ತು ಮುಂದುವರೆಸಿ "</string>
 </resources>
