--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1014,7 +1014,7 @@
     <string name="kids_number">"KID %d DETAIL</string>
 
     <string name="cannot_be_left_blank">cannot be left blank\u0020</string>
-    <string name="Please_enter_a_valid">Please enter a valid\u0020</string>
+    <string name="please_enter_a_valid">Please enter a valid\u0020</string>
     <string name="need_to_select_option">You need to select an option for\u0020</string>
     <string name="rewards_tab_detail">Rewards</string>
 
@@ -1026,10 +1026,6 @@
     <string name="stop_recording">First stop recording then save</string>
     <string name="cancel_audio">Cancel</string>
     <string name="add">Add</string>
-
-    //Rewards Strings
-
-
     <string name="rewards_enter_otp">Enter OTP</string>
     <string name="rewards_confirm">Confirm</string>
     <string name="rewards_first_name">First Name</string>
@@ -1047,6 +1043,6 @@
     <string name="rewards_non_working">Non-working</string>
     <string name="rewards_language">Language</string>
     <string name="rewards_save_continue"> Save And Continue</string>
-
-
+    <string name="rewards.social.facebook_connected">FACEBOOK CONNECTED</string>
+    <string name="rewards.social.instagram_connected">INSTAGRAM CONNECTED</string>
 </resources>
