--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -928,4 +928,6 @@
     <string name="rewards_non_working">ಕೆಲಸ ಮಾಡದಿರುವುದು</string>
     <string name="rewards_language">ಭಾಷೆ</string>
     <string name="rewards_save_continue">"ಉಳಿಸಿ ಮತ್ತು ಮುಂದುವರೆಸಿ "</string>
+    <string name="momspresso_rewards">ಮೊಮ್ಸ್‍ಪ್ರೆಸ್ಸೊ ಬಹುಮಾನಗಳು</string>
+    <string name="rewards_participate">ನಿಮ್ಮ ಪ್ರೊಫೈಲ್ ಅನ್ನು ಪೂರ್ಣಗೊಳಿಸುವ ಮೂಲಕ ಭಾಗವಹಿಸಿ ಮತ್ತು ಗಳಿಸಿ!</string>
 </resources>
