--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -882,4 +882,6 @@
     <string name="rewards_non_working">नॉन- वर्किंग</string>
     <string name="rewards_language">भाषा</string>
     <string name="rewards_save_continue">जतन करा आणि सुरु ठेवा</string>
+    <string name="momspresso_rewards">मोम्सप्रेसो पुरस्कार</string>
+    <string name="rewards_participate">सहभाग घ्या आपले प्रोफाइल पूर्ण करा आणि कमवा!</string>
 </resources>
