--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -884,4 +884,6 @@
     <string name="rewards_non_working">வேலைக்கு செல்லாதவர்</string>
     <string name="rewards_language">மொழி</string>
     <string name="rewards_save_continue">சேமி  தொடரவும்</string>
+    <string name="momspresso_rewards">மாம்ஸ்ப்ரெஸ்ஸோ வெகுமதிகள்</string>
+    <string name="rewards_participate">உங்கள் சுயவிவரத்தை நிறைவு செய்வதன் மூலம் இப்போது பங்கேற்று சம்பாதிக்கலாம்!</string>
 </resources>
