--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -877,4 +877,6 @@
     <string name="rewards_non_working">"నాన్ వర్కింగ్ "</string>
     <string name="rewards_language">భాష</string>
     <string name="rewards_save_continue">సేవ్ చేసి కొనసాగండి</string>
+    <string name="momspresso_rewards">"మామ్స్‌ప్రెస్సో రివార్ద్స్‌ "</string>
+    <string name="rewards_participate">"మీ ప్రొఫైల్ పూర్తి చేసి పాల్గొనండి మరియు సంపాదించండి! "</string>
 </resources>
