--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -893,4 +893,6 @@
     <string name="rewards_non_working">"गैर कामकाजी "</string>
     <string name="rewards_language">"भाषा "</string>
     <string name="rewards_save_continue">"सेव करें और आगे बढ़ें "</string>
+    <string name="momspresso_rewards">"मॉम्सप्रेस्सो ईनामी योजना "</string>
+    <string name="rewards_participate">अपने प्रोफाइल को अभी भरें और ईनामी योजना में हिस्सा ले कर लाभ कमाएं !</string>
 </resources>
